# BigWhiteTool

./: CMakeLists.txt  README.md  m.bat
.github/workflows/: main.yml
include/Android_Read/: BigWhiteRead.h  qx10.hpp
include/Android_draw/: DrawFun.h  Struct.h  draw.h
include/Android_dump/: dumper.h
include/My_Utils/: http.h  imgui_image.h
include/native_surface/: ANativeWindowCreator.h
include/native_surface/aosp/: native_surface_14.h
include/tools/: main.h
src/: BigWhiteTool.cpp  main.cpp
src/Android_Read/: BigWhiteRead.cpp
src/Android_draw/: DrawFun.cpp  draw.cpp
src/Android_dump/: dumper.cpp  engine.cpp  generic.cpp
src/Android_touch/: TouchHelperA.cpp
src/Android_vulkan/: VulkanUtils.cpp
src/My_Utils/: imgui_image.cpp
src/native_surface/: extern_function.cpp
